Render stars with correct spacing between each rating, text currently higher than stars positionally

--- a/client/src/components/Ratings.css
+++ b/client/src/components/Ratings.css
@@ -10,14 +10,19 @@
   display: flex;
   flex-wrap: wrap;
   width: 594px;
+  justify-content: space-between;
 
   border: solid black 1px;
 }
 
 .rating {
-  flex: 0 0 50%;
+  flex: 0 0 280px;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+  display: flex;
+  justify-content: space-between;
 }
+
+
 .full-star {
   position: relative;
   display: inline-block;
